--- a/views/indexsavedarticles.handlebars
+++ b/views/indexsavedarticles.handlebars
@@ -8,10 +8,8 @@
             <div class="title" data-title={{this.title}}>{{this.title}}</div>
             <div class="summary" data-summary="{{this.summary}}">{{this.summary}}</div>
             <a class="text" href="{{this.text}}">{{this.text}}</a>
-            <button data-title="{{this.title}}" data-summary="{{this.summary}}" data-text="{{this.text}}" class="button">Save Article!</button>
+            <button data-title="{{this.title}}" data-summary="{{this.summary}}" data-text="{{this.text}}" class="deletebutton">Delete Article!</button>
             </div>
             </div>
           {{/each}}
     </div>
-
-    
