working on notes - displays notes, needs to add note to database for article

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -7,7 +7,7 @@
            <div class="swiftarticle">
             <div class="title" data-title={{this.title}}>{{this.title}}</div>
             <div class="summary" data-summary="{{this.summary}}">{{this.summary}}</div>
-            <a class="text" href="{{this.text}}">{{this.text}}</a>
+            <a class="text" target="_blank" href="{{this.text}}">{{this.text}}</a>
             <button data-title="{{this.title}}" data-summary="{{this.summary}}" data-text="{{this.text}}" class="button">Save Article!</button>
             </div>
             </div>
