--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -44,8 +44,12 @@ a {
     padding: 20px;
 }
 
-.button, .deletebutton {
+.button, .deletebutton, .articlenotes {
     padding: 10px;
+}
+
+.articlenotesmodal {
+
 }
 
 .side {
@@ -54,3 +58,59 @@ a {
     background-color: white;
     margin: 20px;
 }
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 200px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  /* modal note form */
+  input {
+    /* display: block; */
+    /* display: flex; */
+    /* justify-content: center; */
+    float: center;
+    /* height: 36px; */
+    width: 200px;
+    /* font-size: 24px; */
+  }
+  textarea {
+    /* display: flex; */
+    /* justify-content: center; */
+    width: 200px;
+    height: 100px;
+  }
