--- a/views/indexsavedarticles.handlebars
+++ b/views/indexsavedarticles.handlebars
@@ -7,9 +7,30 @@
            <div class="swiftarticle">
             <div class="title" data-title={{this.title}}>{{this.title}}</div>
             <div class="summary" data-summary="{{this.summary}}">{{this.summary}}</div>
-            <a class="text" href="{{this.text}}">{{this.text}}</a>
+            <a class="text" target="_blank" href="{{this.text}}">{{this.text}}</a>
+            <button data-title="{{this.title}}" data-summary="{{this.summary}}" data-text="{{this.text}}" class="articlenotes">Notes</button>
             <button data-title="{{this.title}}" data-summary="{{this.summary}}" data-text="{{this.text}}" class="deletebutton">Delete Article!</button>
             </div>
             </div>
           {{/each}}
     </div>
+
+<!-- The Modal -->
+<div class="articlenotesmodal modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    {{> notes-modal-block}}
+    <form action="/submitnote" method="post">
+    <h2>Enter a Note!</h2>
+      <input type="hidden" name="articletitle" value="{{this.title}}">
+      <input type="text" name="title" placeholder="Title">
+      <br>
+      <textarea type="text" name="body" placeholder="Write Your Note Here"></textarea>
+      <br>
+      <br>
+      <input class="notebutton" type="submit" value="Add Note">
+    </form>
+  </div>
+</div>
