--- a/views/indexhome.handlebars
+++ b/views/indexhome.handlebars
@@ -1,4 +1,4 @@
-<div class="header"><h2>Swift Scraper</h2><a href="/">Home</a><a href="/scrape">Scrape Articles</a></div>
+<div class="header"><h2>Swift Scraper</h2><a href="/home">Home</a><a href="/api/saved">Saved Articles</a></div>
 <div class="side">
     <img src="/assets/img/swift.jpg" alt="Swift Image"><div height="350" width="500"><h1 style="padding:20px">iOS Programming</h1></div>
 </div>
