--- a/views/indexsavedarticles.handlebars
+++ b/views/indexsavedarticles.handlebars
@@ -1,4 +1,4 @@
-<div class="header"><h2>Swift Scraper</h2><a href="/">Home</a><a href="/api/saved">Saved Articles</a><a href="/scrape">Scrape New Articles</a></div>
+<div class="header"><h2>Swift Scraper</h2><a href="/home">Home</a><a href="/api/saved">Saved Articles</a></div>
 <div class="side">
     <img src="/assets/img/swift.jpg" alt="Swift Image"><div height="350" width="500"><h1 style="padding:20px">iOS Programming</h1></div>
 </div>
@@ -22,8 +22,8 @@
     <form action="/submitnote" method="post">
     <h2>Enter a Note!</h2>
       <input type="hidden" name="articletitle" value="{{this.title}}">
-      <input type="text" name="title" placeholder="Title">
-      <br>
+      {{!-- <input type="text" name="title" placeholder="Title">
+      <br> --}}
       <textarea type="text" name="body" placeholder="Write Your Note Here"></textarea>
       <br>
       <br>
